UHF-5938: set aria label to fix sonar cloud bug

--- a/templates/debug-item--robots.html.twig
+++ b/templates/debug-item--robots.html.twig
@@ -19,7 +19,7 @@
 #}
 
 <h2>Robots</h2>
-<table role="presentation" style="width:auto;">
+<table aria-label="robots table" style="width:auto;">
   <thead>
   <tr>
     <th id="robot-header-key">Key</th>
